# process-manager

./: .gitignore  LICENSE  README.md  fpmd.service  install.sh
cli/: Cargo.toml
cli/src/: answer.rs  command.rs  commands.rs  config.rs  main.rs
cli/src/commands/: backup.rs  delete.rs  ecosystem.rs  help.rs  restart.rs  start.rs  status.rs  stop.rs
daemon/: Cargo.toml
daemon/src/: backup.rs  commands.rs  main.rs  processes.rs  socket.rs
daemon/src/commands/: backup.rs  delete.rs  restart.rs  start.rs  status.rs  stop.rs
