[package]
name = "fpmd"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
directories = "6.0.0"
nix = { version = "0.30.1", features = ["process", "signal"] }
notify = "8.1.0"
procfs = "0.17.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
